# src/modules/user/User.route.ts
@@ -18,6 +18,7 @@ router.get('/profile/me', authMiddleware, UserController.getMyProfile); // #swag
 router.put('/profile/me', authMiddleware, UserController.updateMyProfile); // #swagger.tags = ['User Profile']
 router.post('/profile/change-password', authMiddleware, UserController.changePassword); // #swagger.tags = ['User Profile']
 router.get('/profile/training-history', authMiddleware, UserController.getMyTrainingHistory); // #swagger.tags = ['User Profile']
+router.get('/attendance/me', authMiddleware, UserController.getMyAttendance); // #swagger.tags = ['User Profile']
 router.get('/designations', UserController.getDesignations); // #swagger.tags = ['User Profile']
 
 // 2. Variable Parameter Routes (e.g., GET/PUT/DELETE by ID)
